[add top footer]

--- a/index.html
+++ b/index.html
@@ -174,12 +174,26 @@
     </main>
 
     <footer>
-      <section class="top-footer bg-secondary">
+      <section class="top-footer text-white ">
         <div class="container">
           <div class="row row-cols-1 row-cols-md-3">
-            <div class="col">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</div>
-            <div class="col">Lorem ipsum dolor sit, amet consectetur adipisicing elit</div>
-            <div class="col">Lorem ipsum dolor sit, amet consectetur adipisicing elit</div>
+            <div class="col text-center ">
+              <p class="text-uppercase ">location</p>
+              <p>2215 Jhon Daniel Driver Clark, MO 54243</p>
+            </div>
+            <div class="col text-center ">
+              <p class="text-uppercase ">araund the web</p>
+              <div class="ghost d-flex justify-content-center">
+                <a class="d-flex align-items-center justify-content-center " href=""><i class="fa-brands fa-facebook-f"></i></a>
+                <a class="d-flex align-items-center justify-content-center " href=""><i class="fa-brands fa-google-plus-g"></i></a>
+                <a class="d-flex align-items-center justify-content-center " href=""><i class="fa-brands fa-twitter"></i></a>
+                <a class="d-flex align-items-center justify-content-center " href=""><i class="fa-brands fa-linkedin"></i></a>
+              </div>
+            </div>
+            <div class="col whitch">
+              <p class="text-uppercase text-center ">about freelancer</p>
+              <p class=" fs-5 fw-medium text-center ">Freelance is a free to use, open source Bootstrap theme created by <a class="text-decoration-none " href="">Start Bootstrap</a></p>
+            </div>
           </div>
         </div>
       </section>
