[add] bot footer

--- a/index.html
+++ b/index.html
@@ -197,10 +197,10 @@
           </div>
         </div>
       </section>
-      <section class="bot-footer">
-        <div class="copyright text-center ">
-          copyright
-        </div>
+      <section class="bot-footer text-center p-5 text-white  ">
+  
+       <p>Copyright &copy; Your Website 2019</p>
+        
       </section>
     </footer>
 
